force-app/main/default/objects/Contract_Line_Item_Schedule__c/Contract_Line_Item_Schedule__c.object-meta.xml
<CustomObject>
    <label>Contract Line Item Schedule</label>
    <nameField>
        <displayFormat>CLIS-{0000000}</displayFormat>
        <label>Contract Line Item Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Item Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>