force-app/main/default/objects/Contract_Line_Item_Schedule__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <description>Billing Date</description>
    <label>Billing Date</label>
    <type>Date</type>
</CustomField>