force-app/main/default/objects/Contract_Line_Item_Schedule__c/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <formula>Contract_Line_Item__r.Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Id</label>
    <type>Text</type>
</CustomField>