force-app/main/default/objects/Contract_Line_Item_Schedule__c/fields/Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item__c</fullName>
    <label>Contract Line Item</label>
    <referenceTo>Contract_Line_Item__c</referenceTo>
    <relationshipLabel>Contract Line Item Schedules</relationshipLabel>
    <relationshipName>Contract_Line_Item_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>