force-app/main/default/objects/Contract_Line_Item_Schedule__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Revenue Recognition Date</label>
    <type>Date</type>
</CustomField>