force-app/main/default/objects/Contract_Line_Item_Schedule__c/fields/Extended_Amount_Gross__c.field-meta.xml
<CustomField>
    <fullName>Extended_Amount_Gross__c</fullName>
    <formula>Extended_Amount__c / (1-Contract_Line_Item__r.Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Amount Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>