force-app/main/default/objects/Contract_Line_Item_Schedule__c/fields/Extended_Amount_with_Discount__c.field-meta.xml
<CustomField>
    <fullName>Extended_Amount_with_Discount__c</fullName>
    <formula>IF(
Contract_Line_Item__r.Rate_Type__c == &apos;CPM&apos;,
((Amount__c - (Amount__c * Contract_Line_Item__r.Discount__c)) * Quantity__c)/1000,
(Amount__c - (Amount__c* Contract_Line_Item__r.Discount__c) )* Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Amount with Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>