force-app/main/default/objects/Contract_Line_Item_Schedule__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>For Media - Derived based on the rate type, may contain decimals.</description>
    <inlineHelpText>For Media - Derived based on the rate type, may contain decimals.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>