force-app/main/default/objects/Contract_Line_Item_Schedule__c/fields/QuantityWholeNumber__c.field-meta.xml
<CustomField>
    <fullName>QuantityWholeNumber__c</fullName>
    <description>To Round up the quantity to nearest integer</description>
    <formula>IF( 
AND(Contract_Line_Item__r.Quantity__c = 1, Contract_Line_Item__r.Rate_Type__c != &apos;CPM&apos;), 
    1,
    ROUND(Quantity__c,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Round the quantity to nearest integer</inlineHelpText>
    <label>Quantity*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>