force-app/main/default/objects/Contract_Line_Item_Schedule__c/fields/Set_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Set_Billing_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a flow updates the Billing Date field to the current date and then unchecks the box ready for future use</description>
    <label>Set Billing Date</label>
    <type>Checkbox</type>
</CustomField>