force-app/main/default/objects/Contract_Line_Item_Schedule__c/validationRules/Billing_Date_cannot_be_in_the_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Date_cannot_be_in_the_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Billing_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Billing_Date__c</errorDisplayField>
    <errorMessage>The Billing Date cannot be in the Past</errorMessage>
</ValidationRule>