force-app/main/default/objects/Contract_Line_Item_Schedule__c/validationRules/Billing_date_Required_on_Set_BillingDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_date_Required_on_Set_BillingDate</fullName>
    <active>true</active>
    <description>Ensures that the Billing Date is populated if the Set Billing Date field is checked</description>
    <errorConditionFormula>OR(
 AND( 
  ISBLANK(Billing_Date__c),
  Set_Billing_Date__c = true
 ),
 AND(
  Set_Billing_Date__c = false,
  ISBLANK(Billing_Date__c) &lt;&gt; True
 )
)</errorConditionFormula>
    <errorMessage>If you are setting a Billing date, please ensure that the Set Billing Date is Checked and a Billing Date is provided.</errorMessage>
</ValidationRule>