force-app/main/default/objects/Contract_Line_Item_Schedule__c/validationRules/Once_Billing_Date_set_lock_editing.validationRule-meta.xml
<ValidationRule>
    <fullName>Once_Billing_Date_set_lock_editing</fullName>
    <active>true</active>
    <description>Ensures that once a Billing Date is set, you can no longer uncheck the record and remove the billing date</description>
    <errorConditionFormula>AND(
  ISCHANGED(Set_Billing_Date__c),
  Set_Billing_Date__c = False,
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>You cannot remove a billing date once set</errorMessage>
</ValidationRule>